// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tooltip/demo/arrow-point-at-center.md correctly 1`] = `
<div>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Align edge / 边缘对齐
    </span>
  </button>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Arrow points to center / 箭头指向中心
    </span>
  </button>
</div>
`;

exports[`renders ./components/tooltip/demo/auto-adjust-overflow.md correctly 1`] = `
<div
  style="overflow:hidden;position:relative;padding:24px;border:1px solid #e9e9e9"
>
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Adjust automatically / 自动调整
    </span>
  </button>
  <br />
  <button
    class="ant-btn"
    type="button"
  >
    <span>
      Ignore / 不处理
    </span>
  </button>
</div>
`;

exports[`renders ./components/tooltip/demo/basic.md correctly 1`] = `
<span>
  Tooltip will show on mouse enter.
</span>
`;

exports[`renders ./components/tooltip/demo/placement.md correctly 1`] = `
<div
  class="demo"
>
  <div
    style="margin-left:70px;white-space:nowrap"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        TL
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Top
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        TR
      </span>
    </button>
  </div>
  <div
    style="width:70px;float:left"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        LT
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Left
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        LB
      </span>
    </button>
  </div>
  <div
    style="width:70px;margin-left:304px"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        RT
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Right
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        RB
      </span>
    </button>
  </div>
  <div
    style="margin-left:70px;clear:both;white-space:nowrap"
  >
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        BL
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        Bottom
      </span>
    </button>
    <button
      class="ant-btn"
      type="button"
    >
      <span>
        BR
      </span>
    </button>
  </div>
</div>
`;
